text align correction
level of awesomeness buttons stacked

--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,11 @@ input[type="email"] {
     width: 100%;
 }
 
+.radio {
+    white-space: nowrap;
+}
+
+
 form {
     max-width: 30em;
     margin: 0 auto;
